objects/Org_Credential_Location_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>AuthProvider__c</fullName>
        <label>AuthProvider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationName__c</fullName>
        <label>LocationName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationType__c</fullName>
        <label>LocationType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Environment Variable</fullName>
                    <default>true</default>
                    <label>Environment Variable</label>
                </value>
                <value>
                    <fullName>Named Credential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrgName__c</fullName>
        <label>OrgName</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CD</fullName>
                    <default>true</default>
                    <label>CD</label>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>SIU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceURL__c</fullName>
        <label>ServiceURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <inlineHelpText>Holds the username of every integration service</inlineHelpText>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Org_Credential_Location_Mapping</label>
    <pluralLabel>Org_Credential_Location_Mappings</pluralLabel>
</CustomObject>